test/files/events-exp-lang-neg/parameters-missing2.check
parameters-missing2.scala:6: error: Unexpected rhs
  evt e2(x: Int) = e1
                   ^
one error found
